--- a/index.html
+++ b/index.html
@@ -571,7 +571,8 @@
                     target="_blank">Demo Video
                   </a></li>
               </ul>
-              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->OpenCV · TensorFlow · Robot Operating
+              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->OpenCV · TensorFlow · Robot
+                Operating
                 System (ROS) · Amazon Web Services (AWS) · Alibaba Cloud · Python · Flutter · gRPC · SQL ·
                 C++<!----></span>
             </div>
@@ -582,20 +583,23 @@
                     Technology (HSEO)</a>,
                   Hong Kong</em></p>
               <ul>
-                <li>Constructed a SQL database for the department staff recording different data.</li>
-                <li>Designed an web-interface using PHP that convenience the process in data input and secure the data
-                  retrieval.</li>
+                <li>Constructed a SQL database to record various departmental and experimental data for staff members.
+                </li>
+                <li>Designed a user-friendly web interface with PHP to streamline data input and enhance data retrieval
+                  security.</li>
               </ul>
+              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->HTML · CSS · JavaScript
+                PHP · SQL <!----></span>
             </div>
             <div class="resume-item">
               <h4>Technician</h4>
               <h5>Jun 2015 - Aug 2015</h5>
               <p><em><a href="http://roctec.com.hk/" target="_blank">Roctec Technology Limited</a>, Hong Kong</em></p>
               <ul>
-                <li>Implemented the testing of a developed multi-media software to ensure there is no error.</li>
-                <li>Investigated the usage of a new developed machine, and compared with old method so as to figure out
-                  which
-                  performance and reliability is better.</li>
+                <li>Conducted thorough testing of newly developed multimedia software to ensure error-free performance.
+                </li>
+                <li>Investigated the usage of a newly developed machine and compared its performance and reliability to
+                  the old method.</li>
               </ul>
             </div>
           </div>
