update self introduction

--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
             </div>
             <hr>
             <p>
-              Motivated to be an influential programmer since I was 10, when I started programming using Lego NXT.
+              15+ years experiences in robotics and software engineering with motivated to be an influential programmer
+              since I was 10, started programming using Lego NXT. Continuous joining in software and robotics
+              competition and working on software related job as Freelance, Part-time, Full-time in startup and large
+              corporation once I reached legal working age.
             </p>
             <p>
               Passionate to learn, willing to embrace challenges, always welcome to discussions and idea exchanges.
