Projects section update

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
           </li>
           <li><a href="#skill" class="nav-link scrollto"><i class="bx bi bi-tools"></i> <span>Skills</span></a>
           </li>
+          <li><a href="#project" class="nav-link scrollto"><i class="bx bi bi-tools"></i> <span>Projects</span></a>
+          </li>
           <li><a href="#award" class="nav-link scrollto"><i class="bx bi-award"></i> <span>Award</span></a></li>
           <li><a href="#activity" class="nav-link scrollto"><i class="bx bi-newspaper"></i> <span>Activity</span></a>
           </li>
@@ -110,6 +112,8 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hong Kong</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Valid Work Visa:</strong> <span>Canada, British</span>
+                  </li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -122,7 +126,10 @@
             </div>
             <hr>
             <p>
-              Motivated to be an influential programmer since I was 10, when I started programming using Lego NXT.
+              15+ years experiences in robotics and software engineering with motivated to be an influential programmer
+              since I was 10, started programming using Lego NXT. Continuous joining in software and robotics
+              competition and working on software related job as Freelance, Part-time, Full-time in startup and large
+              corporation once I reached legal working age.
             </p>
             <p>
               Passionate to learn, willing to embrace challenges, always welcome to discussions and idea exchanges.
@@ -571,7 +578,8 @@
                     target="_blank">Demo Video
                   </a></li>
               </ul>
-              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->OpenCV · TensorFlow · Robot Operating
+              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->OpenCV · TensorFlow · Robot
+                Operating
                 System (ROS) · Amazon Web Services (AWS) · Alibaba Cloud · Python · Flutter · gRPC · SQL ·
                 C++<!----></span>
             </div>
@@ -582,20 +590,23 @@
                     Technology (HSEO)</a>,
                   Hong Kong</em></p>
               <ul>
-                <li>Constructed a SQL database for the department staff recording different data.</li>
-                <li>Designed an web-interface using PHP that convenience the process in data input and secure the data
-                  retrieval.</li>
+                <li>Constructed a SQL database to record various departmental and experimental data for staff members.
+                </li>
+                <li>Designed a user-friendly web interface with PHP to streamline data input and enhance data retrieval
+                  security.</li>
               </ul>
+              <span aria-hidden="true"><strong><!---->Skills：<!----></strong><!---->HTML · CSS · JavaScript
+                PHP · SQL <!----></span>
             </div>
             <div class="resume-item">
               <h4>Technician</h4>
               <h5>Jun 2015 - Aug 2015</h5>
               <p><em><a href="http://roctec.com.hk/" target="_blank">Roctec Technology Limited</a>, Hong Kong</em></p>
               <ul>
-                <li>Implemented the testing of a developed multi-media software to ensure there is no error.</li>
-                <li>Investigated the usage of a new developed machine, and compared with old method so as to figure out
-                  which
-                  performance and reliability is better.</li>
+                <li>Conducted thorough testing of newly developed multimedia software to ensure error-free performance.
+                </li>
+                <li>Investigated the usage of a newly developed machine and compared its performance and reliability to
+                  the old method.</li>
               </ul>
             </div>
           </div>
@@ -654,8 +665,253 @@
       </div>
     </section>
 
+    <!-- ======= Project Section ======= -->
+    <section id="project" class="project section-bg">
+      <div class="container">
+        <div class="section-title">
+          <h2>Projects</h2>
+        </div>
+        <p>
+          The following section records some of my working projects that is interesting to share. Some of the code is
+          not shared due to contracts. Some of them are course project (Marked as CP). All the listed projects
+          are worked more than a month, and projects that are less interesting and course related is not shown in the
+          list. You can navigate to education section for the related course project.
+        </p>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="card mb-4">
+              <img class="card-img-top" src="assets/img/indoor-service-robot.jpg"
+                style="height: 500px; object-fit: contain;" alt="Indoor service robot">
+              <div class="card-body">
+                <h5 class="card-title">Indoor Service Robot</h5>
+                <p class="card-text">
+                  Introducing the State-of-the-Art indoor
+                  service robot, for creating a futuristic workplace, achieving home automation, and paving the way to
+                  Smart Cities.
+                </p>
+                <a href="assets/file/HKCLR/Demo.pdf" class="btn btn-primary" target="_blank">Demo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card mb-4">
+              <img class="card-img-top" src="assets/img/directed-graph.png" style="height: 500px; object-fit: contain;"
+                alt="Directed Graph Display">
+              <div class="card-body">
+                <h5 class="card-title">Directed Graph</h5>
+                <p class="card-text">
+                  Interactive Directed Graph Display with HTML5, CSS, JS, d3js. It map actual dimensions to graph in Web
+                  display. It
+                  is useful for any routes display, abstract map application.
+                </p>
+                <a href="https://gitlab.com/jeff214103/directed-graph-web-display" class="btn btn-primary"
+                  target="_blank">Gitlab</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="card mb-4">
+              <img class="card-img-top" src="assets/img/urology_app.png" style="height: 500px; object-fit: contain;"
+                alt="Urology App">
+              <div class="card-body">
+                <h5 class="card-title">Health Care App (Urology)</h5>
+                <p class="card-text">
+                  Collaborting with Urology Doctors in HK, Health Care Application written in Flutter, decentralized and
+                  user owned data helping with doctors diangosis.
+                </p>
+                <a href="https://gitlab.com/HKCLR-robot/urology-record-app" class="btn btn-primary"
+                  target="_blank">Gitlab</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-4">
+          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProjectList"
+            aria-expanded="false" aria-controls="collapseProjectList">
+            More
+          </button>
+        </div>
+        <div class="collapse" id="collapseProjectList">
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/cutsha.png" style="height: 300px; object-fit: contain;"
+                  alt="Cutsha">
+                <div class="card-body">
+                  <h5 class="card-title">Cutsha</h5>
+                  <p class="card-text">
+                    Hair Booking Platform prototype. Work with friends in spare time, as Hong Kong professional hair
+                    dressing platform, with web scraping technologies.
+                  </p>
+                  <a href="https://cut7hairdemo.web.app/" class="btn btn-primary" target="_blank">Demo</a>
+                  <a href="https://gitlab.com/jeff214103/cut7hair" class="btn btn-primary" target="_blank">Git</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/vision_test.png" style="height: 300px; object-fit: contain;"
+                  alt="Vision Test">
+                <div class="card-body">
+                  <h5 class="card-title">Health Care App (Vision)</h5>
+                  <p class="card-text">
+                    Working with Polytechnic University Sight Doctor, a basic color bind test app based on Ishihara
+                    research.
+                  </p>
+                  <a href="https://gitlab.com/HKCLR-robot/vision-test-app" class="btn btn-primary"
+                    target="_blank">Gitlab</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/hearing.png" style="height: 300px; object-fit: contain;"
+                  alt="Urology App">
+                <div class="card-body">
+                  <h5 class="card-title">Health Care App (Hearing)</h5>
+                  <p class="card-text">
+                    Working with Chinese University Head and Neck Surgery Doctor, a basic hearing test app integrating
+                    with indoor service robot.
+                  </p>
+                  <a href="https://gitlab.com/HKCLR-robot/hearing-test-app-package" class="btn btn-primary"
+                    target="_blank">Gitlab</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/robocon2020_robot.png"
+                  style="height: 300px; object-fit: contain;" alt="Robocon">
+                <div class="card-body">
+                  <h5 class="card-title">Robocon 2020</h5>
+                  <p class="card-text">
+                    Work as a software team manager, working on auto-aiming mechanism, human-robot interaction, and
+                    basic embedded system control.
+                  </p>
+                  <a href="assets/file/Robotics/HongKong_B_CUHK_video-1.mp4" class="btn btn-primary"
+                    target="_blank">Video</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/robocon2019_robot.png"
+                  style="height: 300px; object-fit: contain;" alt="Vision Test">
+                <div class="card-body">
+                  <h5 class="card-title">Robocon 2019</h5>
+                  <p class="card-text">
+                    Work as a software team manager, working on 4 legged robot control, robot automation, human-robot
+                    interaction, and
+                    basic embedded system.
+                  </p>
+                  <a href="https://www.youtube.com/watch?v=1WVDXrlHUsA&t=3s&ab_channel=VSSUTROBOTICS"
+                    class="btn btn-primary" target="_blank">Video</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/ROV.png" style="height: 300px; object-fit: contain;"
+                  alt="Urology App">
+                <div class="card-body">
+                  <h5 class="card-title">ROV (Remote Operated Vehicle)</h5>
+                  <p class="card-text">
+                    Work as a electronic engineer, working with cable, signal, and actuator control with underwater
+                    robotics. Also, provide advise to software team for image recogintion.
+                  </p>
+                  <a href="assets/file/Robotics/Explorer_E04_HongKong_CU_TR_333.pdf" class="btn btn-primary"
+                    target="_blank">Report</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/cityhunt.png" style="height: 300px; object-fit: contain;"
+                  alt="Robocon">
+                <div class="card-body">
+                  <h5 class="card-title">CityHunt (2016)</h5>
+                  <p class="card-text">
+                    Work on a real-time City Hunt Application for CUHK Engineering Orientation Camp using PHP, and later
+                    sold at 100K HKD.
+                  </p>
+                  <a href="assets/file/Cityhunt.zip" class="btn btn-primary" target="_blank">Prototype Code</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/Big Data 5003.png" style="height: 300px; object-fit: contain;"
+                  alt="Vision Test">
+                <div class="card-body">
+                  <h5 class="card-title">Real-time Twitter Sentiment Analysis (CP)</h5>
+                  <p class="card-text">
+                    Work along with team of 4, working on real-time Twitter sentiment analyze with machine learning
+                    models using Spark and Azure Databrick. My focus was data mining, and real-time dashboard display.
+                  </p>
+                  <a href="assets/file/HKUST/MSBD5003_report.pdf" class="btn btn-primary" target="_blank">Report</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/CV 5016.png" style="height: 300px; object-fit: contain;"
+                  alt="Urology App">
+                <div class="card-body">
+                  <h5 class="card-title">Facial Keypoints Detection (CP)</h5>
+                  <p class="card-text">
+                    Computer Vision Project on Facial Keypoints Detection. Future hope to extend to vision test, so as
+                    to make the app more useful and all rounded.
+                  </p>
+                  <a href="assets/file/HKUST/MSBD5016_report.pdf" class="btn btn-primary" target="_blank">Report</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/Smart Contract.png"
+                  style="height: 300px; object-fit: contain;" alt="Vision Test">
+                <div class="card-body">
+                  <h5 class="card-title">Underground Construction Contract (CP)</h5>
+                  <p class="card-text">
+                    Working with Hong Kong Government Underground Project, making a prototype of underground
+                    construction project using technology of blockchain (smart contract) with Ganache and Solidity.
+                  </p>
+                  <a href="assets/file/HKUST/MSBD5017_report.pdf" class="btn btn-primary" target="_blank">Report</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/3D Game Booth.png" style="height: 300px; object-fit: contain;"
+                  alt="Robocon">
+                <div class="card-body">
+                  <h5 class="card-title">3D Game (Game Booth)</h5>
+                  <p class="card-text">
+                    Work for 50th Anniversary School Open Day, using Unity3D engine, written in Javascript and C#.
+                    Control with body gesture using Microsoft Kinect sensor.
+                  </p>
+                  <a href="assets/file/game_report.pdf" class="btn btn-primary" target="_blank">Report</a>
+                  <a href="assets/file/SBA(2015 video).mp4" class="btn btn-primary" target="_blank">Game Play</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
     <!-- ======= Award Section ======= -->
-    <section id="award" class="award section-bg">
+    <section id="award" class="award">
       <div class="container">
         <div class="section-title">
           <h2>Award and Achievement</h2>
