--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </li>
           <li><a href="#skill" class="nav-link scrollto"><i class="bx bi bi-tools"></i> <span>Skills</span></a>
           </li>
-          <li><a href="#project" class="nav-link scrollto"><i class="bx bi bi-tools"></i> <span>Projects</span></a>
+          <li><a href="#project" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a>
           </li>
           <li><a href="#award" class="nav-link scrollto"><i class="bx bi-award"></i> <span>Award</span></a></li>
           <li><a href="#activity" class="nav-link scrollto"><i class="bx bi-newspaper"></i> <span>Activity</span></a>
