Update projects Tic-Tac-Toe

--- a/index.html
+++ b/index.html
@@ -891,6 +891,20 @@
             </div>
             <div class="col-lg-4">
               <div class="card mb-4">
+                <img class="card-img-top" src="assets/img/tic-tac-toe.png" style="height: 300px; object-fit: contain;"
+                  alt="Robocon">
+                <div class="card-body">
+                  <h5 class="card-title">AI Tic-Tac-Toe</h5>
+                  <p class="card-text">
+                    Simple console game written in python3, along with machine learning reinforcement learning.
+                    Self-interested project for machine learning studie`s.
+                  </p>
+                  <a href="https://github.com/jeff214103/Tic-Tac-Toe-Reinforcement-Learning" class="btn btn-primary" target="_blank">Github</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="card mb-4">
                 <img class="card-img-top" src="assets/img/3D Game Booth.png" style="height: 300px; object-fit: contain;"
                   alt="Robocon">
                 <div class="card-body">
