--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
             <tr>
               <th scope="row">Tools (SW related)</th>
               <td> Robotic and Embedded System (Arduino, Linux, Jetson Nano, ROS)<br>
-                IoT (MQTT)<br>
+                IoT (MQTT, Mosquitto)<br>
                 Computer Vision (OpenCV)<br>
                 API (gRPC, RESTFUL)<br>
                 Backend (Flask, Express, SQL, MongoDB)<br>
@@ -689,7 +689,7 @@
                   service robot, for creating a futuristic workplace, achieving home automation, and paving the way to
                   Smart Cities.
                 </p>
-                <a href="assets/file/HKCLR/Demo.pdf" class="btn btn-primary" target="_blank">Demo</a>
+                <a href="assets/file/HKCLR/Demo.pdf" class="btn btn-custom-green" target="_blank">Demo</a>
               </div>
             </div>
           </div>
@@ -704,7 +704,7 @@
                   display. It
                   is useful for any routes display, abstract map application.
                 </p>
-                <a href="https://gitlab.com/jeff214103/directed-graph-web-display" class="btn btn-primary"
+                <a href="https://gitlab.com/jeff214103/directed-graph-web-display" class="btn btn-custom-green"
                   target="_blank">Gitlab</a>
               </div>
             </div>
@@ -719,14 +719,14 @@
                   Collaborting with Urology Doctors in HK, Health Care Application written in Flutter, decentralized and
                   user owned data helping with doctors diangosis.
                 </p>
-                <a href="https://gitlab.com/HKCLR-robot/urology-record-app" class="btn btn-primary"
+                <a href="https://gitlab.com/HKCLR-robot/urology-record-app" class="btn btn-custom-green"
                   target="_blank">Gitlab</a>
               </div>
             </div>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
-          <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProjectList"
+          <button class="btn btn-custom-green" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProjectList"
             aria-expanded="false" aria-controls="collapseProjectList">
             More
           </button>
@@ -743,8 +743,8 @@
                     Hair Booking Platform prototype. Work with friends in spare time, as Hong Kong professional hair
                     dressing platform, with web scraping technologies.
                   </p>
-                  <a href="https://cut7hairdemo.web.app/" class="btn btn-primary" target="_blank">Demo</a>
-                  <a href="https://gitlab.com/jeff214103/cut7hair" class="btn btn-primary" target="_blank">Git</a>
+                  <a href="https://cut7hairdemo.web.app/" class="btn btn-custom-green" target="_blank">Demo</a>
+                  <a href="https://gitlab.com/jeff214103/cut7hair" class="btn btn-custom-green" target="_blank">Git</a>
                 </div>
               </div>
             </div>
@@ -758,7 +758,7 @@
                     Working with Polytechnic University Sight Doctor, a basic color bind test app based on Ishihara
                     research.
                   </p>
-                  <a href="https://gitlab.com/HKCLR-robot/vision-test-app" class="btn btn-primary"
+                  <a href="https://gitlab.com/HKCLR-robot/vision-test-app" class="btn btn-custom-green"
                     target="_blank">Gitlab</a>
                 </div>
               </div>
@@ -773,7 +773,7 @@
                     Working with Chinese University Head and Neck Surgery Doctor, a basic hearing test app integrating
                     with indoor service robot.
                   </p>
-                  <a href="https://gitlab.com/HKCLR-robot/hearing-test-app-package" class="btn btn-primary"
+                  <a href="https://gitlab.com/HKCLR-robot/hearing-test-app-package" class="btn btn-custom-green"
                     target="_blank">Gitlab</a>
                 </div>
               </div>
@@ -791,7 +791,7 @@
                     Work as a software team manager, working on auto-aiming mechanism, human-robot interaction, and
                     basic embedded system control.
                   </p>
-                  <a href="assets/file/Robotics/HongKong_B_CUHK_video-1.mp4" class="btn btn-primary"
+                  <a href="assets/file/Robotics/HongKong_B_CUHK_video-1.mp4" class="btn btn-custom-green"
                     target="_blank">Video</a>
                 </div>
               </div>
@@ -808,7 +808,7 @@
                     basic embedded system.
                   </p>
                   <a href="https://www.youtube.com/watch?v=1WVDXrlHUsA&t=3s&ab_channel=VSSUTROBOTICS"
-                    class="btn btn-primary" target="_blank">Video</a>
+                    class="btn btn-custom-green" target="_blank">Video</a>
                 </div>
               </div>
             </div>
@@ -822,7 +822,7 @@
                     Work as a electronic engineer, working with cable, signal, and actuator control with underwater
                     robotics. Also, provide advise to software team for image recogintion.
                   </p>
-                  <a href="assets/file/Robotics/Explorer_E04_HongKong_CU_TR_333.pdf" class="btn btn-primary"
+                  <a href="assets/file/Robotics/Explorer_E04_HongKong_CU_TR_333.pdf" class="btn btn-custom-green"
                     target="_blank">Report</a>
                 </div>
               </div>
@@ -840,7 +840,7 @@
                     Work on a real-time City Hunt Application for CUHK Engineering Orientation Camp using PHP, and later
                     sold at 100K HKD.
                   </p>
-                  <a href="assets/file/Cityhunt.zip" class="btn btn-primary" target="_blank">Prototype Code</a>
+                  <a href="assets/file/Cityhunt.zip" class="btn btn-custom-green" target="_blank">Prototype Code</a>
                 </div>
               </div>
             </div>
@@ -854,7 +854,7 @@
                     Work along with team of 4, working on real-time Twitter sentiment analyze with machine learning
                     models using Spark and Azure Databrick. My focus was data mining, and real-time dashboard display.
                   </p>
-                  <a href="assets/file/HKUST/MSBD5003_report.pdf" class="btn btn-primary" target="_blank">Report</a>
+                  <a href="assets/file/HKUST/MSBD5003_report.pdf" class="btn btn-custom-green" target="_blank">Report</a>
                 </div>
               </div>
             </div>
@@ -868,7 +868,7 @@
                     Computer Vision Project on Facial Keypoints Detection. Future hope to extend to vision test, so as
                     to make the app more useful and all rounded.
                   </p>
-                  <a href="assets/file/HKUST/MSBD5016_report.pdf" class="btn btn-primary" target="_blank">Report</a>
+                  <a href="assets/file/HKUST/MSBD5016_report.pdf" class="btn btn-custom-green" target="_blank">Report</a>
                 </div>
               </div>
             </div>
@@ -885,7 +885,7 @@
                     Working with Hong Kong Government Underground Project, making a prototype of underground
                     construction project using technology of blockchain (smart contract) with Ganache and Solidity.
                   </p>
-                  <a href="assets/file/HKUST/MSBD5017_report.pdf" class="btn btn-primary" target="_blank">Report</a>
+                  <a href="assets/file/HKUST/MSBD5017_report.pdf" class="btn btn-custom-green" target="_blank">Report</a>
                 </div>
               </div>
             </div>
@@ -899,7 +899,7 @@
                     Simple console game written in python3, along with machine learning reinforcement learning.
                     Self-interested project for machine learning studie`s.
                   </p>
-                  <a href="https://github.com/jeff214103/Tic-Tac-Toe-Reinforcement-Learning" class="btn btn-primary" target="_blank">Github</a>
+                  <a href="https://github.com/jeff214103/Tic-Tac-Toe-Reinforcement-Learning" class="btn btn-custom-green" target="_blank">Github</a>
                 </div>
               </div>
             </div>
@@ -913,8 +913,8 @@
                     Work for 50th Anniversary School Open Day, using Unity3D engine, written in Javascript and C#.
                     Control with body gesture using Microsoft Kinect sensor.
                   </p>
-                  <a href="assets/file/game_report.pdf" class="btn btn-primary" target="_blank">Report</a>
-                  <a href="assets/file/SBA(2015 video).mp4" class="btn btn-primary" target="_blank">Game Play</a>
+                  <a href="assets/file/game_report.pdf" class="btn btn-custom-green" target="_blank">Report</a>
+                  <a href="assets/file/SBA(2015 video).mp4" class="btn btn-custom-green" target="_blank">Game Play</a>
                 </div>
               </div>
             </div>
