--- a/index.html
+++ b/index.html
@@ -726,8 +726,8 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-4">
-          <button class="btn btn-custom-green" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProjectList"
-            aria-expanded="false" aria-controls="collapseProjectList">
+          <button class="btn btn-custom-green" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseProjectList" aria-expanded="false" aria-controls="collapseProjectList">
             More
           </button>
         </div>
@@ -854,7 +854,8 @@
                     Work along with team of 4, working on real-time Twitter sentiment analyze with machine learning
                     models using Spark and Azure Databrick. My focus was data mining, and real-time dashboard display.
                   </p>
-                  <a href="assets/file/HKUST/MSBD5003_report.pdf" class="btn btn-custom-green" target="_blank">Report</a>
+                  <a href="assets/file/HKUST/MSBD5003_report.pdf" class="btn btn-custom-green"
+                    target="_blank">Report</a>
                 </div>
               </div>
             </div>
@@ -868,7 +869,8 @@
                     Computer Vision Project on Facial Keypoints Detection. Future hope to extend to vision test, so as
                     to make the app more useful and all rounded.
                   </p>
-                  <a href="assets/file/HKUST/MSBD5016_report.pdf" class="btn btn-custom-green" target="_blank">Report</a>
+                  <a href="assets/file/HKUST/MSBD5016_report.pdf" class="btn btn-custom-green"
+                    target="_blank">Report</a>
                 </div>
               </div>
             </div>
@@ -885,7 +887,8 @@
                     Working with Hong Kong Government Underground Project, making a prototype of underground
                     construction project using technology of blockchain (smart contract) with Ganache and Solidity.
                   </p>
-                  <a href="assets/file/HKUST/MSBD5017_report.pdf" class="btn btn-custom-green" target="_blank">Report</a>
+                  <a href="assets/file/HKUST/MSBD5017_report.pdf" class="btn btn-custom-green"
+                    target="_blank">Report</a>
                 </div>
               </div>
             </div>
@@ -899,7 +902,8 @@
                     Simple console game written in python3, along with machine learning reinforcement learning.
                     Self-interested project for machine learning studie`s.
                   </p>
-                  <a href="https://github.com/jeff214103/Tic-Tac-Toe-Reinforcement-Learning" class="btn btn-custom-green" target="_blank">Github</a>
+                  <a href="https://github.com/jeff214103/Tic-Tac-Toe-Reinforcement-Learning"
+                    class="btn btn-custom-green" target="_blank">Github</a>
                 </div>
               </div>
             </div>
@@ -1076,9 +1080,13 @@
             <div>
               <ul class="timeline">
                 <li>
+                  <b>First Tech Challenge (FTC) - Judge Helper</b>
+                  <b class="float-end date"> 2023
+                  </b>
+                </li>
+                <li>
                   <b>CUHK Robocon Team - Observer</b>
                   <b class="float-end date"> 2022
-                  </b>
                   </b><br>
                   <em>Related news</em>
                   <ul>
