--- a/index.html
+++ b/index.html
@@ -700,9 +700,9 @@
               <div class="card-body">
                 <h5 class="card-title">Directed Graph</h5>
                 <p class="card-text">
-                  Interactive Directed Graph Display with HTML5, CSS, JS, d3js. It map actual dimensions to graph in Web
-                  display. It
-                  is useful for any routes display, abstract map application.
+                  Interactive Directed Graph Display, built with HTML5, CSS, JS, and d3js. It brings the data to life by
+                  seamlessly mapping actual dimensions to graph in a web
+                  display. Suitable for displaying routes and abstract maps.
                 </p>
                 <a href="https://gitlab.com/jeff214103/directed-graph-web-display" class="btn btn-custom-green"
                   target="_blank">Gitlab</a>
@@ -716,8 +716,10 @@
               <div class="card-body">
                 <h5 class="card-title">Health Care App (Urology)</h5>
                 <p class="card-text">
-                  Collaborting with Urology Doctors in HK, Health Care Application written in Flutter, decentralized and
-                  user owned data helping with doctors diangosis.
+                  Built with Flutter and designed in collaboration
+                  with Urology Doctors in HK. This app empowers patients assisting doctors in making accurate diagnoses
+                  with decentralized, and
+                  user-friendly interface.
                 </p>
                 <a href="https://gitlab.com/HKCLR-robot/urology-record-app" class="btn btn-custom-green"
                   target="_blank">Gitlab</a>
@@ -740,8 +742,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Cutsha</h5>
                   <p class="card-text">
-                    Hair Booking Platform prototype. Work with friends in spare time, as Hong Kong professional hair
-                    dressing platform, with web scraping technologies.
+                    Cutsha is the prototype solution built with my friends in spare
+                    time.
+                    Utilizing advanced web scraping technologies, it simplifies the
+                    appointment booking process and connects you with top-notch hairdressers.
                   </p>
                   <a href="https://cut7hairdemo.web.app/" class="btn btn-custom-green" target="_blank">Demo</a>
                   <a href="https://gitlab.com/jeff214103/cut7hair" class="btn btn-custom-green" target="_blank">Git</a>
@@ -755,8 +759,9 @@
                 <div class="card-body">
                   <h5 class="card-title">Health Care App (Vision)</h5>
                   <p class="card-text">
-                    Working with Polytechnic University Sight Doctor, a basic color bind test app based on Ishihara
-                    research.
+                    Developed in partnership
+                    with Polytechnic University Sight Doctor, with Ishihara research based, this app offers
+                    a basic color bind screening test that is both accurate and easy to use.
                   </p>
                   <a href="https://gitlab.com/HKCLR-robot/vision-test-app" class="btn btn-custom-green"
                     target="_blank">Gitlab</a>
@@ -770,8 +775,10 @@
                 <div class="card-body">
                   <h5 class="card-title">Health Care App (Hearing)</h5>
                   <p class="card-text">
-                    Working with Chinese University Head and Neck Surgery Doctor, a basic hearing test app integrating
-                    with indoor service robot.
+                    Developed in partnership with a top Chinese University Head and
+                    Neck Surgery Doctor, this app provides a basic hearing test that with seamless integration
+                    with indoor service robot proejct. Professional medical assistant is no longer a requirement for
+                    professional routine checks.
                   </p>
                   <a href="https://gitlab.com/HKCLR-robot/hearing-test-app-package" class="btn btn-custom-green"
                     target="_blank">Gitlab</a>
